--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://NaveenReturn.github.io/shoping",
+  "homepage":"https://NaveenReturn.github.io/shopping",
   "name": "shoping",
   "private": true,
   "version": "0.0.0",
